Add alternative payee names from bank to payee field

The AqBanking library provides alternative names if used by the
institution. These names contain vital information about the payee/payer
which gets lost. This change appends these additional names to the
existing payee field. Payee name matching will take care of modifying it
into the form the user wants to see.

BUG: 452616
FIXED-IN: 5.1.3
(cherry picked from commit 078ae991486aedf7a05137ccc97d35787c4b0a76)